--- a/web/join/login.html
+++ b/web/join/login.html
@@ -16,22 +16,22 @@
             <article>
                 <h1 class="logo">
                         <a href="/" >
-                            <img src="/images/common/logo.png" alt="로고">
+                            <img src="../../images/common/logo.png" alt="로고">
                         </a>
                 </h1>
                 <div class="gnb_area">
                     <div class="util">
                         <ul>
                             <li><a href="../../web/join/login.html">
-                                <img src="/images/common/icon_login.png" alt="">
+                                <img src="../../images/common/icon_login.png" alt="">
                                 로그인
                             </a></li>
                             <li><a href="../../web/join/join.html">
-                                <img src="/images/common/icon_join.png" alt="">
+                                <img src="../../images/common/icon_join.png" alt="">
                                 회원가입
                             </a></li>
                             <li><a href="">
-                                <img src="/images/common/icon_language.png" alt="">
+                                <img src="../../images/common/icon_language.png" alt="">
                                 ENG
                             </a></li>
                         </ul>
@@ -81,14 +81,14 @@
                                 </ul>
                             </li>
                         </ul>
-                        <a href="#" class="all_btn"><img src="/images/common/icon_nav_all.svg" alt=""></a>
+                        <a href="#" class="all_btn"><img src="../../images/common/icon_nav_all.svg" alt=""></a>
                     </nav>
                 </div>
-                <a href="#" class="mo_all_btn"><img src="/images/common/icon_nav_all.svg" alt=""></a>
+                <a href="#" class="mo_all_btn"><img src="../../images/common/icon_nav_all.svg" alt=""></a>
             </article>
             <div class="all-menu">
                 <i class="close">
-                    <img class="pc_close" src="/images/common/header_icon_close.svg" alt="전체메뉴닫기버튼">
+                    <img class="pc_close" src="../../images/common/header_icon_close.svg" alt="전체메뉴닫기버튼">
                 </i>
                 <div class="menu_list">
                     <div class="part">
@@ -160,48 +160,48 @@
                         <li><a href="">마이페이지</a></li>
                     </ul>
                     <i class="mo_close">
-                        <img src="/images/common/mo_header_icon_close.svg" alt="모바일_전체메뉴닫기버튼">
+                        <img src="../../images/common/mo_header_icon_close.svg" alt="모바일_전체메뉴닫기버튼">
                     </i>
                 </div>
                 <div class="favorite">
                     <div class="favo_tit">
                         <h4>FAVORITE MENU</h4>
-                        <a href="">MENU PLUS <i><img src="/images/common/icon_plus.png" alt=""></i></a>
+                        <a href="">MENU PLUS <i><img src="../../images/common/icon_plus.png" alt=""></i></a>
                     </div>
                     <ul>
                         <li>
                             <a href="">
-                                <img src="/images/module/mo_favo_icon01.png" alt="자주사용하는메뉴아이콘">
+                                <img src="../../images/module/mo_favo_icon01.png" alt="자주사용하는메뉴아이콘">
                                 <span>청소년게임<br>제공업</span>
                             </a>
                         </li>
                         <li>
                             <a href="">
-                                <img src="/images/module/mo_favo_icon02.png" alt="자주사용하는메뉴아이콘">
+                                <img src="../../images/module/mo_favo_icon02.png" alt="자주사용하는메뉴아이콘">
                                 <span>인터넷컴퓨터<br>제공업</span>
                             </a>
                         </li>
                         <li>
                             <a href="">
-                                <img src="/images/module/mo_favo_icon03.png" alt="자주사용하는메뉴아이콘">
+                                <img src="../../images/module/mo_favo_icon03.png" alt="자주사용하는메뉴아이콘">
                                 <span>나의 학습방</span>
                             </a>
                         </li>
                         <li>
                             <a href="../../web/notice/faq.html">
-                                <img src="/images/module/mo_favo_icon04.png" alt="자주사용하는메뉴아이콘">
+                                <img src="../../images/module/mo_favo_icon04.png" alt="자주사용하는메뉴아이콘">
                                 <span>자주하는 질문</span>
                             </a>
                         </li>
                         <li>
                             <a href="">
-                                <img src="/images/common/mo_icon_pius.png" alt="자주사용하는메뉴아이콘">
+                                <img src="../../images/common/mo_icon_pius.png" alt="자주사용하는메뉴아이콘">
                                 <span></span>
                             </a>
                         </li>
                         <li>
                             <a href="">
-                                <img src="/images/common/mo_icon_pius.png" alt="자주사용하는메뉴아이콘">
+                                <img src="../../images/common/mo_icon_pius.png" alt="자주사용하는메뉴아이콘">
                                 <span></span>
                             </a>
                         </li>
@@ -211,7 +211,7 @@
                     <div class="part">
                         <ul>
                             <li>
-                                <span class="tit">게임물관련사업자교육<img src="/images/common/mo_allmenu_arrow.svg" alt=""></span>
+                                <span class="tit">게임물관련사업자교육<img src="../../images/common/mo_allmenu_arrow.svg" alt=""></span>
                                 <ul class="mo_sub_menu">
                                     <li><a href="">청소년게임제공업</a></li>
                                     <li><a href="">인터넷컴퓨터게임시설제공업</a></li>
@@ -226,7 +226,7 @@
                     <div class="part">
                         <ul>
                             <li>
-                                <span class="tit">자체등급분류사업자교육<img src="/images/common/mo_allmenu_arrow.svg" alt=""></span>
+                                <span class="tit">자체등급분류사업자교육<img src="../../images/common/mo_allmenu_arrow.svg" alt=""></span>
                                 <ul class="mo_sub_menu">
                                     <li><a href="">청소년게임제공업</a></li>
                                     <li><a href="">인터넷컴퓨터게임시설제공업</a></li>
@@ -237,7 +237,7 @@
                         </ul>
                         <ul>
                             <li>
-                                <span class="tit">공무원맞춤교육<img src="/images/common/mo_allmenu_arrow.svg" alt=""></span>
+                                <span class="tit">공무원맞춤교육<img src="../../images/common/mo_allmenu_arrow.svg" alt=""></span>
                                 <ul class="mo_sub_menu">
                                     <li><a href="">청소년게임제공업</a></li>
                                     <li><a href="">게임배급업</a></li>
@@ -248,7 +248,7 @@
                     <div class="part">
                         <ul>
                             <li>
-                                <span class="tit">게임물이용자교육<img src="/images/common/mo_allmenu_arrow.svg" alt=""></span>
+                                <span class="tit">게임물이용자교육<img src="../../images/common/mo_allmenu_arrow.svg" alt=""></span>
                                 <ul class="mo_sub_menu">
                                     <li><a href="">청소년게임제공업</a></li>
                                     <li><a href="">게임배급업</a></li>
@@ -257,7 +257,7 @@
                         </ul>
                         <ul>
                             <li>
-                                <span class="tit">소통공간<img src="/images/common/mo_allmenu_arrow.svg" alt=""></span>
+                                <span class="tit">소통공간<img src="../../images/common/mo_allmenu_arrow.svg" alt=""></span>
                                 <ul class="mo_sub_menu">
                                     <li><a href="../../web/notice/notice.html">공지사항</a></li>
                                     <li><a href="../../web/notice/faq.html">자주묻는질문</a></li>
